[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Player/Сharacteristics.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player/Add.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Сharacteristics.gd" type="Script" id=3]

[sub_resource type="TileSet" id=1]
0/name = "Сharacteristics.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Сharacteristics.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 96, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Сharacteristics.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 96, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Сharacteristics.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 96, 96, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Сharacteristics.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 32, 0, 64, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Сharacteristics.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 112, 32, 16, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Сharacteristics.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 32, 16, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "Сharacteristics.png 7"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 32, 112, 64, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "Сharacteristics.png 8"
8/texture = ExtResource( 1 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 32, 32, 16, 16 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0

[node name="Сharacteristics" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
cell_quadrant_size = 20
format = 1
tile_data = PoolIntArray( -1048595, 0, 0, -1048591, 4, 0, -1048590, 4, 0, -1048589, 4, 0, -1048588, 4, 0, -1048587, 4, 0, -1048586, 4, 0, -1048585, 4, 0, -1048584, 4, 0, -1048583, 4, 0, -1048582, 4, 0, -1048581, 4, 0, -1048580, 4, 0, -1048579, 4, 0, -1048578, 4, 0, -1048577, 4, 0, -1114112, 4, 0, -1114111, 4, 0, -1114110, 4, 0, -1114109, 4, 0, -1114108, 4, 0, -1114107, 4, 0, -1114106, 4, 0, -1114105, 4, 0, -1114104, 4, 0, -1114097, 1, 0, -917519, 8, 0, -917518, 8, 0, -917517, 8, 0, -917516, 8, 0, -917515, 8, 0, -917514, 8, 0, -917513, 8, 0, -917512, 8, 0, -917511, 8, 0, -917510, 8, 0, -917509, 8, 0, -917508, 8, 0, -917507, 8, 0, -917506, 8, 0, -917505, 8, 0, -983040, 8, 0, -983039, 8, 0, -983038, 8, 0, -983037, 8, 0, -983036, 8, 0, -983035, 8, 0, -983034, 8, 0, -983033, 8, 0, -983032, 8, 0, -983031, 8, 0, -983030, 8, 0, -983029, 8, 0, -983028, 8, 0, -983027, 8, 0, -983026, 8, 0, -851984, 8, 0, -851983, 8, 0, -851982, 8, 0, -851981, 8, 0, -851980, 8, 0, -851979, 8, 0, -851978, 8, 0, -851977, 8, 0, -851976, 8, 0, -851975, 8, 0, -851974, 8, 0, -851973, 8, 0, -851972, 8, 0, -851971, 8, 0, -851970, 8, 0, -851969, 8, 0, -917504, 8, 0, -917503, 8, 0, -917502, 8, 0, -917501, 8, 0, -917500, 8, 0, -917499, 8, 0, -917498, 8, 0, -917497, 8, 0, -917496, 8, 0, -917495, 8, 0, -917494, 8, 0, -917493, 8, 0, -917492, 8, 0, -917491, 8, 0, -917490, 8, 0, -786451, 6, 0, -786449, 8, 0, -786448, 8, 0, -786447, 8, 0, -786446, 8, 0, -786445, 8, 0, -786444, 8, 0, -786443, 8, 0, -786442, 8, 0, -786441, 8, 0, -786440, 8, 0, -786439, 8, 0, -786438, 8, 0, -786437, 8, 0, -786436, 8, 0, -786435, 8, 0, -786434, 8, 0, -786433, 8, 0, -851968, 8, 0, -851967, 8, 0, -851966, 8, 0, -851965, 8, 0, -851964, 8, 0, -851963, 8, 0, -851962, 8, 0, -851961, 8, 0, -851960, 8, 0, -851959, 8, 0, -851958, 8, 0, -851957, 8, 0, -851956, 8, 0, -851955, 8, 0, -851954, 8, 0, -851953, 8, 0, -851951, 5, 0, -720915, 6, 0, -720913, 8, 0, -720912, 8, 0, -720911, 8, 0, -720910, 8, 0, -720909, 8, 0, -720908, 8, 0, -720907, 8, 0, -720906, 8, 0, -720905, 8, 0, -720904, 8, 0, -720903, 8, 0, -720902, 8, 0, -720901, 8, 0, -720900, 8, 0, -720899, 8, 0, -720898, 8, 0, -720897, 8, 0, -786432, 8, 0, -786431, 8, 0, -786430, 8, 0, -786429, 8, 0, -786428, 8, 0, -786427, 8, 0, -786426, 8, 0, -786425, 8, 0, -786424, 8, 0, -786423, 8, 0, -786422, 8, 0, -786421, 8, 0, -786420, 8, 0, -786419, 8, 0, -786418, 8, 0, -786417, 8, 0, -786415, 5, 0, -655379, 6, 0, -655377, 8, 0, -655376, 8, 0, -655375, 8, 0, -655374, 8, 0, -655373, 8, 0, -655372, 8, 0, -655371, 8, 0, -655370, 8, 0, -655369, 8, 0, -655368, 8, 0, -655367, 8, 0, -655366, 8, 0, -655365, 8, 0, -655364, 8, 0, -655363, 8, 0, -655362, 8, 0, -655361, 8, 0, -720896, 8, 0, -720895, 8, 0, -720894, 8, 0, -720893, 8, 0, -720892, 8, 0, -720891, 8, 0, -720890, 8, 0, -720889, 8, 0, -720888, 8, 0, -720887, 8, 0, -720886, 8, 0, -720885, 8, 0, -720884, 8, 0, -720883, 8, 0, -720882, 8, 0, -720881, 8, 0, -720879, 5, 0, -589843, 6, 0, -589841, 8, 0, -589840, 8, 0, -589839, 8, 0, -589838, 8, 0, -589837, 8, 0, -589836, 8, 0, -589835, 8, 0, -589834, 8, 0, -589833, 8, 0, -589832, 8, 0, -589831, 8, 0, -589830, 8, 0, -589829, 8, 0, -589828, 8, 0, -589827, 8, 0, -589826, 8, 0, -589825, 8, 0, -655360, 8, 0, -655359, 8, 0, -655358, 8, 0, -655357, 8, 0, -655356, 8, 0, -655355, 8, 0, -655354, 8, 0, -655353, 8, 0, -655352, 8, 0, -655351, 8, 0, -655350, 8, 0, -655349, 8, 0, -655348, 8, 0, -655347, 8, 0, -655346, 8, 0, -655345, 8, 0, -655343, 5, 0, -524307, 6, 0, -524305, 8, 0, -524304, 8, 0, -524303, 8, 0, -524302, 8, 0, -524301, 8, 0, -524300, 8, 0, -524299, 8, 0, -524298, 8, 0, -524297, 8, 0, -524296, 8, 0, -524295, 8, 0, -524294, 8, 0, -524293, 8, 0, -524292, 8, 0, -524291, 8, 0, -524290, 8, 0, -524289, 8, 0, -589824, 8, 0, -589823, 8, 0, -589822, 8, 0, -589821, 8, 0, -589820, 8, 0, -589819, 8, 0, -589818, 8, 0, -589817, 8, 0, -589816, 8, 0, -589815, 8, 0, -589814, 8, 0, -589813, 8, 0, -589812, 8, 0, -589811, 8, 0, -589810, 8, 0, -589809, 8, 0, -589807, 5, 0, -458771, 6, 0, -458769, 8, 0, -458768, 8, 0, -458767, 8, 0, -458766, 8, 0, -458765, 8, 0, -458764, 8, 0, -458763, 8, 0, -458762, 8, 0, -458761, 8, 0, -458760, 8, 0, -458759, 8, 0, -458758, 8, 0, -458757, 8, 0, -458756, 8, 0, -458755, 8, 0, -458754, 8, 0, -458753, 8, 0, -524288, 8, 0, -524287, 8, 0, -524286, 8, 0, -524285, 8, 0, -524284, 8, 0, -524283, 8, 0, -524282, 8, 0, -524281, 8, 0, -524280, 8, 0, -524279, 8, 0, -524278, 8, 0, -524277, 8, 0, -524276, 8, 0, -524275, 8, 0, -524274, 8, 0, -524273, 8, 0, -524271, 5, 0, -393235, 6, 0, -393233, 8, 0, -393232, 8, 0, -393231, 8, 0, -393230, 8, 0, -393229, 8, 0, -393228, 8, 0, -393227, 8, 0, -393226, 8, 0, -393225, 8, 0, -393224, 8, 0, -393223, 8, 0, -393222, 8, 0, -393221, 8, 0, -393220, 8, 0, -393219, 8, 0, -393218, 8, 0, -393217, 8, 0, -458752, 8, 0, -458751, 8, 0, -458750, 8, 0, -458749, 8, 0, -458748, 8, 0, -458747, 8, 0, -458746, 8, 0, -458745, 8, 0, -458744, 8, 0, -458743, 8, 0, -458742, 8, 0, -458741, 8, 0, -458740, 8, 0, -458739, 8, 0, -458738, 8, 0, -458737, 8, 0, -458735, 5, 0, -327699, 6, 0, -327697, 8, 0, -327696, 8, 0, -327695, 8, 0, -327694, 8, 0, -327693, 8, 0, -327692, 8, 0, -327691, 8, 0, -327690, 8, 0, -327689, 8, 0, -327688, 8, 0, -327687, 8, 0, -327686, 8, 0, -327685, 8, 0, -327684, 8, 0, -327683, 8, 0, -327682, 8, 0, -327681, 8, 0, -393216, 8, 0, -393215, 8, 0, -393214, 8, 0, -393213, 8, 0, -393212, 8, 0, -393211, 8, 0, -393210, 8, 0, -393209, 8, 0, -393208, 8, 0, -393207, 8, 0, -393206, 8, 0, -393205, 8, 0, -393204, 8, 0, -393203, 8, 0, -393202, 8, 0, -393201, 8, 0, -393199, 5, 0, -262163, 6, 0, -262161, 8, 0, -262160, 8, 0, -262159, 8, 0, -262158, 8, 0, -262157, 8, 0, -262156, 8, 0, -262155, 8, 0, -262154, 8, 0, -262153, 8, 0, -262152, 8, 0, -262151, 8, 0, -262150, 8, 0, -262149, 8, 0, -262148, 8, 0, -262147, 8, 0, -262146, 8, 0, -262145, 8, 0, -327680, 8, 0, -327679, 8, 0, -327678, 8, 0, -327677, 8, 0, -327676, 8, 0, -327675, 8, 0, -327674, 8, 0, -327673, 8, 0, -327672, 8, 0, -327671, 8, 0, -327670, 8, 0, -327669, 8, 0, -327668, 8, 0, -327667, 8, 0, -327666, 8, 0, -327665, 8, 0, -327663, 5, 0, -196627, 6, 0, -196625, 8, 0, -196624, 8, 0, -196623, 8, 0, -196622, 8, 0, -196621, 8, 0, -196620, 8, 0, -196619, 8, 0, -196618, 8, 0, -196617, 8, 0, -196616, 8, 0, -196615, 8, 0, -196614, 8, 0, -196613, 8, 0, -196612, 8, 0, -196611, 8, 0, -196610, 8, 0, -196609, 8, 0, -262144, 8, 0, -262143, 8, 0, -262142, 8, 0, -262141, 8, 0, -262140, 8, 0, -262139, 8, 0, -262138, 8, 0, -262137, 8, 0, -262136, 8, 0, -262135, 8, 0, -262134, 8, 0, -262133, 8, 0, -262132, 8, 0, -262131, 8, 0, -262130, 8, 0, -262129, 8, 0, -262127, 5, 0, -131091, 6, 0, -131089, 8, 0, -131088, 8, 0, -131087, 8, 0, -131086, 8, 0, -131085, 8, 0, -131084, 8, 0, -131083, 8, 0, -131082, 8, 0, -131081, 8, 0, -131080, 8, 0, -131079, 8, 0, -131078, 8, 0, -131077, 8, 0, -131076, 8, 0, -131075, 8, 0, -131074, 8, 0, -131073, 8, 0, -196608, 8, 0, -196607, 8, 0, -196606, 8, 0, -196605, 8, 0, -196604, 8, 0, -196603, 8, 0, -196602, 8, 0, -196601, 8, 0, -196600, 8, 0, -196599, 8, 0, -196598, 8, 0, -196597, 8, 0, -196596, 8, 0, -196595, 8, 0, -196594, 8, 0, -196593, 8, 0, -196591, 5, 0, -65555, 6, 0, -65553, 8, 0, -65552, 8, 0, -65551, 8, 0, -65550, 8, 0, -65549, 8, 0, -65548, 8, 0, -65547, 8, 0, -65546, 8, 0, -65545, 8, 0, -65544, 8, 0, -65543, 8, 0, -65542, 8, 0, -65541, 8, 0, -65540, 8, 0, -65539, 8, 0, -65538, 8, 0, -65537, 8, 0, -131072, 8, 0, -131071, 8, 0, -131070, 8, 0, -131069, 8, 0, -131068, 8, 0, -131067, 8, 0, -131066, 8, 0, -131065, 8, 0, -131064, 8, 0, -131063, 8, 0, -131062, 8, 0, -131061, 8, 0, -131060, 8, 0, -131059, 8, 0, -131058, 8, 0, -131057, 8, 0, -131055, 5, 0, -19, 6, 0, -17, 8, 0, -16, 8, 0, -15, 8, 0, -14, 8, 0, -13, 8, 0, -12, 8, 0, -11, 8, 0, -10, 8, 0, -9, 8, 0, -8, 8, 0, -7, 8, 0, -6, 8, 0, -5, 8, 0, -4, 8, 0, -3, 8, 0, -2, 8, 0, -1, 8, 0, -65536, 8, 0, -65535, 8, 0, -65534, 8, 0, -65533, 8, 0, -65532, 8, 0, -65531, 8, 0, -65530, 8, 0, -65529, 8, 0, -65528, 8, 0, -65527, 8, 0, -65526, 8, 0, -65525, 8, 0, -65524, 8, 0, -65523, 8, 0, -65522, 8, 0, -65521, 8, 0, -65519, 5, 0, 65517, 6, 0, 65519, 8, 0, 65520, 8, 0, 65521, 8, 0, 65522, 8, 0, 65523, 8, 0, 65524, 8, 0, 65525, 8, 0, 65526, 8, 0, 65527, 8, 0, 65528, 8, 0, 65529, 8, 0, 65530, 8, 0, 65531, 8, 0, 65532, 8, 0, 65533, 8, 0, 65534, 8, 0, 65535, 8, 0, 0, 8, 0, 1, 8, 0, 2, 8, 0, 3, 8, 0, 4, 8, 0, 5, 8, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 8, 0, 10, 8, 0, 11, 8, 0, 12, 8, 0, 13, 8, 0, 14, 8, 0, 15, 8, 0, 17, 5, 0, 131053, 6, 0, 131055, 8, 0, 131056, 8, 0, 131057, 8, 0, 131058, 8, 0, 131059, 8, 0, 131060, 8, 0, 131061, 8, 0, 131062, 8, 0, 131063, 8, 0, 131064, 8, 0, 131065, 8, 0, 131066, 8, 0, 131067, 8, 0, 131068, 8, 0, 131069, 8, 0, 131070, 8, 0, 131071, 8, 0, 65536, 8, 0, 65537, 8, 0, 65538, 8, 0, 65539, 8, 0, 65540, 8, 0, 65541, 8, 0, 65542, 8, 0, 65543, 8, 0, 65544, 8, 0, 65545, 8, 0, 65546, 8, 0, 65547, 8, 0, 65548, 8, 0, 65549, 8, 0, 65550, 8, 0, 65551, 8, 0, 65553, 5, 0, 196589, 6, 0, 196591, 8, 0, 196592, 8, 0, 196593, 8, 0, 196594, 8, 0, 196595, 8, 0, 196596, 8, 0, 196597, 8, 0, 196598, 8, 0, 196599, 8, 0, 196600, 8, 0, 196601, 8, 0, 196602, 8, 0, 196603, 8, 0, 196604, 8, 0, 196605, 8, 0, 196606, 8, 0, 196607, 8, 0, 131072, 8, 0, 131073, 8, 0, 131074, 8, 0, 131075, 8, 0, 131076, 8, 0, 131077, 8, 0, 131078, 8, 0, 131079, 8, 0, 131080, 8, 0, 131081, 8, 0, 131082, 8, 0, 131083, 8, 0, 131084, 8, 0, 131085, 8, 0, 131086, 8, 0, 131087, 8, 0, 131089, 5, 0, 262125, 6, 0, 262127, 8, 0, 262128, 8, 0, 262129, 8, 0, 262130, 8, 0, 262131, 8, 0, 262132, 8, 0, 262133, 8, 0, 262134, 8, 0, 262135, 8, 0, 262136, 8, 0, 262137, 8, 0, 262138, 8, 0, 262139, 8, 0, 262140, 8, 0, 262141, 8, 0, 262142, 8, 0, 262143, 8, 0, 196608, 8, 0, 196609, 8, 0, 196610, 8, 0, 196611, 8, 0, 196612, 8, 0, 196613, 8, 0, 196614, 8, 0, 196615, 8, 0, 196616, 8, 0, 196617, 8, 0, 196618, 8, 0, 196619, 8, 0, 196620, 8, 0, 196621, 8, 0, 196622, 8, 0, 196623, 8, 0, 196625, 5, 0, 327661, 6, 0, 327663, 8, 0, 327664, 8, 0, 327665, 8, 0, 327666, 8, 0, 327667, 8, 0, 327668, 8, 0, 327669, 8, 0, 327670, 8, 0, 327671, 8, 0, 327672, 8, 0, 327673, 8, 0, 327674, 8, 0, 327675, 8, 0, 327676, 8, 0, 327677, 8, 0, 327678, 8, 0, 327679, 8, 0, 262144, 8, 0, 262145, 8, 0, 262146, 8, 0, 262147, 8, 0, 262148, 8, 0, 262149, 8, 0, 262150, 8, 0, 262151, 8, 0, 262152, 8, 0, 262153, 8, 0, 262154, 8, 0, 262155, 8, 0, 262156, 8, 0, 262157, 8, 0, 262158, 8, 0, 262159, 8, 0, 262161, 5, 0, 393197, 6, 0, 393199, 8, 0, 393200, 8, 0, 393201, 8, 0, 393202, 8, 0, 393203, 8, 0, 393204, 8, 0, 393205, 8, 0, 393206, 8, 0, 393207, 8, 0, 393208, 8, 0, 393209, 8, 0, 393210, 8, 0, 393211, 8, 0, 393212, 8, 0, 393213, 8, 0, 393214, 8, 0, 393215, 8, 0, 327680, 8, 0, 327681, 8, 0, 327682, 8, 0, 327683, 8, 0, 327684, 8, 0, 327685, 8, 0, 327686, 8, 0, 327687, 8, 0, 327688, 8, 0, 327689, 8, 0, 327690, 8, 0, 327691, 8, 0, 327692, 8, 0, 327693, 8, 0, 327694, 8, 0, 327695, 8, 0, 327697, 5, 0, 458733, 6, 0, 458735, 8, 0, 458736, 8, 0, 458737, 8, 0, 458738, 8, 0, 458739, 8, 0, 458740, 8, 0, 458741, 8, 0, 458742, 8, 0, 458743, 8, 0, 458744, 8, 0, 458745, 8, 0, 458746, 8, 0, 458747, 8, 0, 458748, 8, 0, 458749, 8, 0, 458750, 8, 0, 458751, 8, 0, 393216, 8, 0, 393217, 8, 0, 393218, 8, 0, 393219, 8, 0, 393220, 8, 0, 393221, 8, 0, 393222, 8, 0, 393223, 8, 0, 393224, 8, 0, 393225, 8, 0, 393226, 8, 0, 393227, 8, 0, 393228, 8, 0, 393229, 8, 0, 393230, 8, 0, 393231, 8, 0, 393233, 5, 0, 524269, 6, 0, 524271, 8, 0, 524272, 8, 0, 524273, 8, 0, 524274, 8, 0, 524275, 8, 0, 524276, 8, 0, 524277, 8, 0, 524278, 8, 0, 524279, 8, 0, 524280, 8, 0, 524281, 8, 0, 524282, 8, 0, 524283, 8, 0, 524284, 8, 0, 524285, 8, 0, 524286, 8, 0, 524287, 8, 0, 458752, 8, 0, 458753, 8, 0, 458754, 8, 0, 458755, 8, 0, 458756, 8, 0, 458757, 8, 0, 458758, 8, 0, 458759, 8, 0, 458760, 8, 0, 458761, 8, 0, 458762, 8, 0, 458763, 8, 0, 458764, 8, 0, 458765, 8, 0, 458766, 8, 0, 458767, 8, 0, 458769, 5, 0, 589805, 6, 0, 589807, 8, 0, 589808, 8, 0, 589809, 8, 0, 589810, 8, 0, 589811, 8, 0, 589812, 8, 0, 589813, 8, 0, 589814, 8, 0, 589815, 8, 0, 589816, 8, 0, 589817, 8, 0, 589818, 8, 0, 589819, 8, 0, 589820, 8, 0, 589821, 8, 0, 589822, 8, 0, 589823, 8, 0, 524288, 8, 0, 524289, 8, 0, 524290, 8, 0, 524291, 8, 0, 524292, 8, 0, 524293, 8, 0, 524294, 8, 0, 524295, 8, 0, 524296, 8, 0, 524297, 8, 0, 524298, 8, 0, 524299, 8, 0, 524300, 8, 0, 524301, 8, 0, 524302, 8, 0, 524303, 8, 0, 524305, 5, 0, 655341, 6, 0, 655343, 8, 0, 655344, 8, 0, 655345, 8, 0, 655346, 8, 0, 655347, 8, 0, 655348, 8, 0, 655349, 8, 0, 655350, 8, 0, 655351, 8, 0, 655352, 8, 0, 655353, 8, 0, 655354, 8, 0, 655355, 8, 0, 655356, 8, 0, 655357, 8, 0, 655358, 8, 0, 655359, 8, 0, 589824, 8, 0, 589825, 8, 0, 589826, 8, 0, 589827, 8, 0, 589828, 8, 0, 589829, 8, 0, 589830, 8, 0, 589831, 8, 0, 589832, 8, 0, 589833, 8, 0, 589834, 8, 0, 589835, 8, 0, 589836, 8, 0, 589837, 8, 0, 589838, 8, 0, 589839, 8, 0, 589841, 5, 0, 720877, 6, 0, 720879, 8, 0, 720880, 8, 0, 720881, 8, 0, 720882, 8, 0, 720883, 8, 0, 720884, 8, 0, 720885, 8, 0, 720886, 8, 0, 720887, 8, 0, 720888, 8, 0, 720889, 8, 0, 720890, 8, 0, 720891, 8, 0, 720892, 8, 0, 720893, 8, 0, 720894, 8, 0, 720895, 8, 0, 655360, 8, 0, 655361, 8, 0, 655362, 8, 0, 655363, 8, 0, 655364, 8, 0, 655365, 8, 0, 655366, 8, 0, 655367, 8, 0, 655368, 8, 0, 655369, 8, 0, 655370, 8, 0, 655371, 8, 0, 655372, 8, 0, 655373, 8, 0, 655374, 8, 0, 655375, 8, 0, 655377, 5, 0, 786413, 6, 0, 786415, 8, 0, 786416, 8, 0, 786417, 8, 0, 786418, 8, 0, 786419, 8, 0, 786420, 8, 0, 786421, 8, 0, 786422, 8, 0, 786423, 8, 0, 786424, 8, 0, 786425, 8, 0, 786426, 8, 0, 786427, 8, 0, 786428, 8, 0, 786429, 8, 0, 786430, 8, 0, 786431, 8, 0, 720896, 8, 0, 720897, 8, 0, 720898, 8, 0, 720899, 8, 0, 720900, 8, 0, 720901, 8, 0, 720902, 8, 0, 720903, 8, 0, 720904, 8, 0, 720905, 8, 0, 720906, 8, 0, 720907, 8, 0, 720908, 8, 0, 720909, 8, 0, 720910, 8, 0, 720911, 8, 0, 720913, 5, 0, 851949, 6, 0, 851951, 8, 0, 851952, 8, 0, 851953, 8, 0, 851954, 8, 0, 851955, 8, 0, 851956, 8, 0, 851957, 8, 0, 851958, 8, 0, 851959, 8, 0, 851960, 8, 0, 851961, 8, 0, 851962, 8, 0, 851963, 8, 0, 851964, 8, 0, 851965, 8, 0, 851966, 8, 0, 851967, 8, 0, 786432, 8, 0, 786433, 8, 0, 786434, 8, 0, 786435, 8, 0, 786436, 8, 0, 786437, 8, 0, 786438, 8, 0, 786439, 8, 0, 786440, 8, 0, 786441, 8, 0, 786442, 8, 0, 786443, 8, 0, 786444, 8, 0, 786445, 8, 0, 786446, 8, 0, 786447, 8, 0, 786449, 5, 0, 917485, 6, 0, 917487, 8, 0, 917488, 8, 0, 917489, 8, 0, 917490, 8, 0, 917491, 8, 0, 917492, 8, 0, 917493, 8, 0, 917494, 8, 0, 917495, 8, 0, 917496, 8, 0, 917497, 8, 0, 917498, 8, 0, 917499, 8, 0, 917500, 8, 0, 917501, 8, 0, 917502, 8, 0, 917503, 8, 0, 851968, 8, 0, 851969, 8, 0, 851970, 8, 0, 851971, 8, 0, 851972, 8, 0, 851973, 8, 0, 851974, 8, 0, 851975, 8, 0, 851976, 8, 0, 851977, 8, 0, 851978, 8, 0, 851979, 8, 0, 851980, 8, 0, 851981, 8, 0, 851982, 8, 0, 851983, 8, 0, 851985, 5, 0, 983021, 6, 0, 983023, 8, 0, 983024, 8, 0, 983025, 8, 0, 983026, 8, 0, 983027, 8, 0, 983028, 8, 0, 983029, 8, 0, 983030, 8, 0, 983031, 8, 0, 983032, 8, 0, 983033, 8, 0, 983034, 8, 0, 983035, 8, 0, 983036, 8, 0, 983037, 8, 0, 983038, 8, 0, 983039, 8, 0, 917504, 8, 0, 917505, 8, 0, 917506, 8, 0, 917507, 8, 0, 917508, 8, 0, 917509, 8, 0, 917510, 8, 0, 917511, 8, 0, 917512, 8, 0, 917513, 8, 0, 917514, 8, 0, 917515, 8, 0, 917516, 8, 0, 917517, 8, 0, 917518, 8, 0, 917519, 8, 0, 917521, 5, 0, 1048557, 6, 0, 1048559, 8, 0, 1048560, 8, 0, 1048561, 8, 0, 1048562, 8, 0, 1048563, 8, 0, 1048564, 8, 0, 1048565, 8, 0, 1048566, 8, 0, 1048567, 8, 0, 1048568, 8, 0, 1048569, 8, 0, 1048570, 8, 0, 1048571, 8, 0, 1048572, 8, 0, 1048573, 8, 0, 1048574, 8, 0, 1048575, 8, 0, 983040, 8, 0, 983041, 8, 0, 983042, 8, 0, 983043, 8, 0, 983044, 8, 0, 983045, 8, 0, 983046, 8, 0, 983047, 8, 0, 983048, 8, 0, 983049, 8, 0, 983050, 8, 0, 983051, 8, 0, 983052, 8, 0, 983053, 8, 0, 983054, 8, 0, 983055, 8, 0, 983057, 5, 0, 1114093, 6, 0, 1114095, 8, 0, 1114096, 8, 0, 1114097, 8, 0, 1114098, 8, 0, 1114099, 8, 0, 1114100, 8, 0, 1114101, 8, 0, 1114102, 8, 0, 1114103, 8, 0, 1114104, 8, 0, 1114105, 8, 0, 1114106, 8, 0, 1114107, 8, 0, 1114108, 8, 0, 1114109, 8, 0, 1114110, 8, 0, 1114111, 8, 0, 1048576, 8, 0, 1048577, 8, 0, 1048578, 8, 0, 1048579, 8, 0, 1048580, 8, 0, 1048581, 8, 0, 1048582, 8, 0, 1048583, 8, 0, 1048584, 8, 0, 1048585, 8, 0, 1048586, 8, 0, 1048587, 8, 0, 1048588, 8, 0, 1048589, 8, 0, 1048590, 8, 0, 1048591, 8, 0, 1048593, 5, 0, 1179629, 6, 0, 1179631, 8, 0, 1179632, 8, 0, 1179633, 8, 0, 1179634, 8, 0, 1179635, 8, 0, 1179636, 8, 0, 1179637, 8, 0, 1179638, 8, 0, 1179639, 8, 0, 1179640, 8, 0, 1179641, 8, 0, 1179642, 8, 0, 1179643, 8, 0, 1179644, 8, 0, 1179645, 8, 0, 1179646, 8, 0, 1179647, 8, 0, 1114112, 8, 0, 1114113, 8, 0, 1114114, 8, 0, 1114115, 8, 0, 1114116, 8, 0, 1114117, 8, 0, 1114118, 8, 0, 1114119, 8, 0, 1114120, 8, 0, 1114121, 8, 0, 1114122, 8, 0, 1114123, 8, 0, 1114124, 8, 0, 1114125, 8, 0, 1114126, 8, 0, 1114127, 8, 0, 1114129, 5, 0, 1245167, 8, 0, 1245168, 8, 0, 1245169, 8, 0, 1245170, 8, 0, 1245171, 8, 0, 1245172, 8, 0, 1245173, 8, 0, 1245174, 8, 0, 1245175, 8, 0, 1245176, 8, 0, 1245177, 8, 0, 1245178, 8, 0, 1245179, 8, 0, 1245180, 8, 0, 1245181, 8, 0, 1245182, 8, 0, 1245183, 8, 0, 1179648, 8, 0, 1179649, 8, 0, 1179650, 8, 0, 1179651, 8, 0, 1179652, 8, 0, 1179653, 8, 0, 1179654, 8, 0, 1179655, 8, 0, 1179656, 8, 0, 1179657, 8, 0, 1179658, 8, 0, 1179659, 8, 0, 1179660, 8, 0, 1179661, 8, 0, 1179662, 8, 0, 1179663, 8, 0, 1310703, 8, 0, 1310704, 8, 0, 1310705, 8, 0, 1310706, 8, 0, 1310707, 8, 0, 1310708, 8, 0, 1310709, 8, 0, 1310710, 8, 0, 1310711, 8, 0, 1310712, 8, 0, 1310713, 8, 0, 1310714, 8, 0, 1310715, 8, 0, 1310716, 8, 0, 1310717, 8, 0, 1310718, 8, 0, 1310719, 8, 0, 1245184, 8, 0, 1245185, 8, 0, 1245186, 8, 0, 1245187, 8, 0, 1245188, 8, 0, 1245189, 8, 0, 1245190, 8, 0, 1245191, 8, 0, 1245192, 8, 0, 1245193, 8, 0, 1245194, 8, 0, 1245195, 8, 0, 1245196, 8, 0, 1245197, 8, 0, 1245198, 8, 0, 1245199, 8, 0, 1376239, 8, 0, 1376240, 8, 0, 1376241, 8, 0, 1376242, 8, 0, 1376243, 8, 0, 1376244, 8, 0, 1376245, 8, 0, 1376246, 8, 0, 1376247, 8, 0, 1376248, 8, 0, 1376249, 8, 0, 1376250, 8, 0, 1376251, 8, 0, 1376252, 8, 0, 1376253, 8, 0, 1376254, 8, 0, 1376255, 8, 0, 1310720, 8, 0, 1310721, 8, 0, 1310722, 8, 0, 1310723, 8, 0, 1310724, 8, 0, 1310725, 8, 0, 1310726, 8, 0, 1310727, 8, 0, 1310728, 8, 0, 1310729, 8, 0, 1310730, 8, 0, 1310731, 8, 0, 1310732, 8, 0, 1310733, 8, 0, 1310734, 8, 0, 1310735, 8, 0, 1441775, 8, 0, 1441776, 8, 0, 1441777, 8, 0, 1441778, 8, 0, 1441779, 8, 0, 1441780, 8, 0, 1441781, 8, 0, 1441782, 8, 0, 1441783, 8, 0, 1441784, 8, 0, 1441785, 8, 0, 1441786, 8, 0, 1441787, 8, 0, 1441788, 8, 0, 1441789, 8, 0, 1441790, 8, 0, 1441791, 8, 0, 1376256, 8, 0, 1376257, 8, 0, 1376258, 8, 0, 1376259, 8, 0, 1376260, 8, 0, 1376261, 8, 0, 1376262, 8, 0, 1376263, 8, 0, 1376264, 8, 0, 1376265, 8, 0, 1376266, 8, 0, 1376267, 8, 0, 1376268, 8, 0, 1376269, 8, 0, 1376270, 8, 0, 1376271, 8, 0, 1507311, 8, 0, 1507312, 8, 0, 1507313, 8, 0, 1507314, 8, 0, 1507315, 8, 0, 1507316, 8, 0, 1507317, 8, 0, 1507318, 8, 0, 1507319, 8, 0, 1507320, 8, 0, 1507321, 8, 0, 1507322, 8, 0, 1507323, 8, 0, 1507324, 8, 0, 1507325, 8, 0, 1507326, 8, 0, 1507327, 8, 0, 1441792, 8, 0, 1441793, 8, 0, 1441794, 8, 0, 1441795, 8, 0, 1441796, 8, 0, 1441797, 8, 0, 1441798, 8, 0, 1441799, 8, 0, 1441800, 8, 0, 1441801, 8, 0, 1441802, 8, 0, 1441803, 8, 0, 1441804, 8, 0, 1441805, 8, 0, 1441806, 8, 0, 1441807, 8, 0, 1572848, 8, 0, 1572849, 8, 0, 1572850, 8, 0, 1572851, 8, 0, 1572852, 8, 0, 1572853, 8, 0, 1572854, 8, 0, 1572855, 8, 0, 1572856, 8, 0, 1572857, 8, 0, 1572858, 8, 0, 1572859, 8, 0, 1572860, 8, 0, 1572861, 8, 0, 1572862, 8, 0, 1572863, 8, 0, 1507328, 8, 0, 1507329, 8, 0, 1507330, 8, 0, 1507331, 8, 0, 1507332, 8, 0, 1507333, 8, 0, 1507334, 8, 0, 1507335, 8, 0, 1507336, 8, 0, 1507337, 8, 0, 1507338, 8, 0, 1507339, 8, 0, 1507340, 8, 0, 1507341, 8, 0, 1507342, 8, 0, 1638381, 2, 0, 1638384, 8, 0, 1638385, 8, 0, 1638386, 8, 0, 1638387, 8, 0, 1638388, 8, 0, 1638389, 8, 0, 1638390, 8, 0, 1638391, 8, 0, 1638392, 8, 0, 1638393, 8, 0, 1638394, 8, 0, 1638395, 8, 0, 1638396, 8, 0, 1638397, 8, 0, 1638398, 8, 0, 1638399, 8, 0, 1572864, 8, 0, 1572865, 8, 0, 1572866, 8, 0, 1572867, 8, 0, 1572868, 8, 0, 1572869, 8, 0, 1572870, 8, 0, 1572871, 8, 0, 1572872, 8, 0, 1572873, 8, 0, 1572874, 8, 0, 1572875, 8, 0, 1572876, 8, 0, 1572877, 8, 0, 1572878, 8, 0, 1572879, 3, 0, 1769455, 7, 0, 1769456, 7, 0, 1769457, 7, 0, 1769458, 7, 0, 1769459, 7, 0, 1769460, 7, 0, 1769461, 7, 0, 1769462, 7, 0, 1769463, 7, 0, 1769464, 7, 0, 1769465, 7, 0, 1769466, 7, 0, 1769467, 7, 0, 1769468, 7, 0, 1769469, 7, 0, 1769470, 7, 0, 1769471, 7, 0, 1703936, 7, 0, 1703937, 7, 0, 1703938, 7, 0, 1703943, 7, 0 )

[node name="Control" type="Control" parent="."]
margin_left = -149.0
margin_top = -134.0
margin_right = 150.0
margin_bottom = 223.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="Control"]
margin_left = 14.0
margin_top = 18.0
margin_right = 69.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 62, 18 )
text = "Level 5"

[node name="Class" type="Label" parent="Control"]
margin_left = 198.0
margin_top = 18.0
margin_right = 282.0
margin_bottom = 33.0
text = "Class Warrior"
align = 2

[node name="Label2" type="Label" parent="Control"]
margin_left = 14.0
margin_top = 44.0
margin_right = 148.0
margin_bottom = 58.0
text = "Main Characteristics:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="STR" type="Label" parent="Control"]
margin_left = 41.0
margin_top = 72.0
margin_right = 108.0
margin_bottom = 86.0
text = "STRENGTH"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DEX" type="Label" parent="Control"]
margin_left = 40.0
margin_top = 95.0
margin_right = 108.0
margin_bottom = 107.0
text = "DEXTERITY"
align = 2

[node name="INT" type="Label" parent="Control"]
margin_left = 14.0
margin_top = 116.0
margin_right = 108.0
margin_bottom = 130.0
text = "INTELLIGANCE"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EMPTY" type="Label" parent="Control"]
margin_left = 41.0
margin_top = 146.0
margin_right = 108.0
margin_bottom = 160.0
rect_scale = Vector2( 0.75, 0.75 )
text = "EMPTY POINT"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddSTR" type="TextureButton" parent="Control"]
margin_left = 149.0
margin_top = 70.0
margin_right = 189.0
margin_bottom = 110.0
rect_scale = Vector2( 0.399999, 0.400001 )
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddDEX" type="TextureButton" parent="Control"]
margin_left = 149.0
margin_top = 92.0
margin_right = 189.0
margin_bottom = 132.0
rect_scale = Vector2( 0.400001, 0.400002 )
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddINT" type="TextureButton" parent="Control"]
margin_left = 149.0
margin_top = 114.0
margin_right = 189.0
margin_bottom = 154.0
rect_scale = Vector2( 0.4, 0.400001 )
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/AddSTR" to="." method="_on_AddSTR_pressed"]
[connection signal="pressed" from="Control/AddDEX" to="." method="_on_AddDEX_pressed"]
[connection signal="pressed" from="Control/AddINT" to="." method="_on_AddINT_pressed"]
